--- a/backend/.env
+++ b/backend/.env
@@ -8,13 +8,11 @@ API_PORT=8000
 CORS_ORIGINS='["http://localhost:3000", "http://localhost:8080"]'
 
 # Model Settings
-MODEL_PATH="./models/lightgbm_model.txt"
-REFERENCE_DATA_PATH="./data/reference_data.eff"
+MODEL_PATH="./backend/models/lightgbm_model.txt"
+REFERENCE_DATA_PATH="./backend/data/reference_data.eff"
 CONFIDENCE_THRESHOLD=0.95
 
-# Redshift Settings
-
-
+# Database Settings
 POSTGRES_HOST="localhost"
 POSTGRES_PORT="5432"
 POSTGRES_DB="vamos-db"
