--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
+altgraph==0.17.4
 annotated-types==0.7.0
 anyio==4.9.0
+certifi==2025.4.26
 click==8.2.1
 colorama==0.4.6
 contourpy==1.3.2
 cycler==0.12.1
+effio @ git+https://bitbucket.vih.infineon.com/scm/~benhamadi/effio.git@d30faac0f6c0c17115e3a3bc09b20a0e4733eb67
 et_xmlfile==2.0.0
 fastapi==0.115.12
 fonttools==4.58.2
+fpdf==1.7.2
 greenlet==3.2.3
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 kiwisolver==1.4.8
 lightgbm==4.6.0
@@ -18,18 +24,27 @@ numpy==1.26.4
 openpyxl==3.1.5
 packaging==25.0
 pandas==2.2.1
+pefile==2023.2.7
 pillow==11.2.1
 psycopg2==2.9.10
 pydantic==2.11.5
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
+pyinstaller==6.14.1
+pyinstaller-hooks-contrib==2025.5
 pyparsing==3.1.2
+PySide6==6.9.1
+PySide6_Addons==6.9.1
+PySide6_Essentials==6.9.1
 pystdf==1.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-multipart==0.0.20
 pytz==2025.2
+pywin32-ctypes==0.2.3
 scipy==1.12.0
+seaborn==0.13.2
+shiboken6==6.9.1
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
