--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ altgraph==0.17.4
 annotated-types==0.7.0
 anyio==4.9.0
 certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
 contourpy==1.3.2
 cycler==0.12.1
-effio @ git+https://bitbucket.vih.infineon.com/scm/~benhamadi/effio.git@d30faac0f6c0c17115e3a3bc09b20a0e4733eb67
 et_xmlfile==2.0.0
 fastapi==0.115.12
 fonttools==4.58.2
@@ -42,6 +42,7 @@ python-dotenv==1.1.0
 python-multipart==0.0.20
 pytz==2025.2
 pywin32-ctypes==0.2.3
+requests==2.32.4
 scipy==1.12.0
 seaborn==0.13.2
 shiboken6==6.9.1
@@ -53,4 +54,5 @@ traitlets==5.14.3
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 tzdata==2025.2
+urllib3==2.4.0
 uvicorn==0.34.3
